add functions to convert wavelength to frequency and vice versa

--- a/emacs.org
+++ b/emacs.org
@@ -306,6 +306,22 @@ The following are several helper functions that are used across the configuratio
   (when (not (one-window-p))
     (delete-window)))
 
+(defun forge/transparency (value)
+  "Set the transparency of the frame window with VALUE 0=transparent/100=opaque."
+  (interactive "nTransparency Value 0 - 100 opaque:")
+  (set-frame-parameter (selected-frame) 'alpha value))
+
+(defun forge/whitespace-visualize ()
+  "Enable whitespace visualizations."
+  (setq highlight-tabs t)
+  (setq show-trailing-whitespace t))
+#+end_src
+
+*** Miscellaneous functions
+The following functions are not so much tied to features.  They are just various
+helpers.
+
+#+begin_src emacs-lisp
 (defun forge/dig-ext (domain)
   "Query for DNS records for DOMAIN of QUERY-TYPE."
   (interactive "sHost: ")
@@ -321,17 +337,18 @@ The following are several helper functions that are used across the configuratio
          (forward-line))
     (dig-mode)))
 
-(defun forge/transparency (value)
-  "Set the transparency of the frame window with VALUE 0=transparent/100=opaque."
-  (interactive "nTransparency Value 0 - 100 opaque:")
-  (set-frame-parameter (selected-frame) 'alpha value))
+(defconst speed_of_light 299792458 "Speed of light, m/s.")
 
-(defun forge/whitespace-visualize ()
-  "Enable whitespace visualizations."
-  (setq highlight-tabs t)
-  (setq show-trailing-whitespace t))
+(defun wavelength-to-frequency (wavelength)
+  "Convert a wavelength to frequency."
+  (interactive "nWavelength: ")
+  (message "Frequency: %0.2f" (/ (/ speed_of_light wavelength) 1000)))
+
+(defun frequency-to-wavelength (frequency)
+  "Convert a frequency to wavelength (nm)."
+  (interactive "nFrequency: ")
+  (message "Wavelength: %0.4f" (/ (/ speed_of_light frequency) 1000)))
 #+end_src
-
 *** Peek
 The following is meant to provide a way to /peek/ at information in a temporary
 window.  This probably could be simplified by using something like [[https://github.com/tumashu/posframe][posframe]].
@@ -419,6 +436,7 @@ window.  This probably could be simplified by using something like [[https://git
     (forge/peek-make-frame qry)))
 
 #+end_src
+
 *** Home Makefile helpers
 #+begin_src emacs-lisp
 (defmacro forge-mkhome-target (target)
