add dot as an org babel language

--- a/emacs.org
+++ b/emacs.org
@@ -2840,7 +2840,7 @@ package via the Org ELPA package repository.
 (use-package org
   :ensure org-plus-contrib
   :preface
-    (defun forge/org-fixed-font-faces ()
+  (defun forge/org-fixed-font-faces ()
     "Keep the following with fixed-pitch fonts."
     (interactive)
     (set-face-attribute 'org-table nil :inherit 'fixed-pitch)
@@ -3022,6 +3022,7 @@ package via the Org ELPA package repository.
                                      :base-directory "~/forge"
                                      :publishing-directory "~/Documents")))
   (org-babel-do-load-languages 'org-babel-load-languages '((ditaa . t)
+                                                           (dot . t)
                                                            (emacs-lisp . t)
                                                            (org . t)
                                                            (perl . t)
