--- a/emacs.org
+++ b/emacs.org
@@ -690,6 +690,13 @@ This defines what package archives are used and then initializes =package=.
 ** =use-package=
 I find the [[https://github.com/jwiegley/use-package][use-package]] macro makes a configuration easier to read and more declarative.  This
 installs the package, if not already present, and then sets it up.
+
+Additional notes:
+
+- Always defer loading packages with =use-package-always-defer=.
+- Try out =use-package-compute-statistics= to compute statistics concerned
+  use-package declarations.  You can view the report with =use-package-report=.
+
 #+begin_src emacs-lisp
 (dolist (package init--core-packages)
   (progn (forge/package-install package)))
@@ -699,17 +706,18 @@ installs the package, if not already present, and then sets it up.
   (require 'use-package))
 
 (setq use-package-verbose t
+      use-package-compute-statistics t       ;; compute
+      use-package-always-defer t             ;; always defer loading
       use-package-minimum-reported-time 0.1) ;; carp if it takes awhile to load a package
 
 (use-package diminish :demand t)
-(use-package bind-key)
+(use-package bind-key :demand t)
 (require 'cl)
 #+end_src
 ** Paradox
 [[https://github.com/Malabarba/paradox][Paradox]] improves upon the default Emacs Package menu.  L
 #+begin_src emacs-lisp
 (use-package paradox
-  :defer t
   :init
   (setq paradox-execute-asynchronously t))
 #+end_src
@@ -718,12 +726,14 @@ installs the package, if not already present, and then sets it up.
 
 #+begin_src emacs-lisp
 (use-package quelpa
+  :demand t
   :init
   (setq quelpa-dir (expand-file-name "quelpa" forge-state-dir)
         quelpa-checkout-melpa-p nil  ;; I'm not using quelpa for packages already in melpa
         quelpa-update-melpa-p nil))
 
 (use-package quelpa-use-package
+  :demand t
   :after quelpa)
 #+end_src
 * Appearance
@@ -862,29 +872,24 @@ looks good.  It will also define a default theme to start with.
   :group 'forge)
 
 (use-package zenburn-theme
-  :defer t
   :custom
   (zenburn-use-variable-pitch t)
   (zenburn-scale-org-headlines t))
 
 (use-package solarized-theme
-  :defer t
   :custom
   (solarized-use-variable-pitch t)
   (solarized-scale-org-headlines t))
 
 (use-package doom-themes
-  :defer t
   :config
   (doom-themes-org-config))
 
 (use-package modus-operandi-theme
-  :defer t
   :custom
   (modus-operandi-theme-scale-headings t))
 
 (use-package modus-vivendi-theme
-  :defer t
   :custom
   (modus-vivendi-theme-scale-headings t))
 
@@ -936,9 +941,7 @@ The following are modes I no longer use.  Configuration is here for reference.
   (after-load-theme . smart-mode-line-enable)
   (after-init . sml/setup))
 
-(use-package nyan-mode
-  :ensure t
-  :defer t)
+(use-package nyan-mode)
 #+end_src
 ** Look and feel
 #+begin_src emacs-lisp
@@ -981,7 +984,7 @@ For example, you can type =C-h= and it will show available completions.
 (use-package which-key
   :ensure t
   :custom (which-key-idle-delay 1.5)
-  :defer 5
+  :demand t
   :diminish
   :commands which-key-mode
   :config (which-key-mode))
@@ -1014,6 +1017,7 @@ This is my personal keymap that then hooks into different commands, hydras, or o
 #+begin_src emacs-lisp
 (use-package hydra
   :ensure t
+  :demand t
   :config
   (defhydra forge/navigate (:foreign-keys run)
     "[Navigate] or q to exit."
@@ -1108,12 +1112,14 @@ perspective, integrates well with Emacs.
 ;; https://github.com/raxod502/selectrum
 (use-package selectrum
   :ensure t
+  :demand t
   :config
   (selectrum-mode 1))
 
 ;; https://github.com/raxod502/prescient.el
 (use-package prescient
   :ensure t
+  :demand t
   :config
   (setq prescient-history-length 200)
   (setq prescient-save-file (expand-file-name "prescient-items" forge-state-dir))
@@ -1122,6 +1128,7 @@ perspective, integrates well with Emacs.
 ;; https://github.com/raxod502/selectrum
 (use-package selectrum-prescient
   :ensure t
+  :demand t
   :after (:all selectrum prescient)
   :config
   (selectrum-prescient-mode +1))
@@ -1129,6 +1136,7 @@ perspective, integrates well with Emacs.
 ;; https://github.com/minad/consult
 (use-package consult
   :ensure t
+  :demand t
   :bind
   (("M-g g" . consult-goto-line)
    ("M-s l" . consult-line)
@@ -1139,6 +1147,7 @@ perspective, integrates well with Emacs.
 ;; https://github.com/minad/marginalia
 (use-package marginalia
   :ensure t
+  :demand t
   :bind (:map minibuffer-local-map
               ("C-M-a" . marginalia-cycle))
   :custom
@@ -1223,7 +1232,6 @@ still using the now obsolete commands & options.
 
 #+begin_src emacs-lisp
 (use-package dumb-jump
-  :defer t
   :ensure t
   :bind
   (("M-g o" . dumb-jump-go-other-window)
@@ -1244,7 +1252,6 @@ is here for reference.
 
 #+begin_src emacs-lisp
 (use-package eyebrowse
-  :defer t
   :custom (eyebrowse-keymap-prefix (kbd "C-\\"))
   :bind
   (("M-1" . eyebrowse-switch-to-window-config-1)
@@ -1265,7 +1272,6 @@ This tries to specify what modes to exclude from =golden-ratio= for window sizin
 
 #+begin_src emacs-lisp
 (use-package golden-ratio
-  :defer t
   :hook
   (ediff-before-setup-windows . (lambda () (golden-ratio-mode -1)))
   (ediff-quit . (lambda () (golden-ratio-mode 1)))
@@ -1386,7 +1392,6 @@ Articles:
 
 #+begin_src emacs-lisp
 (use-package undo-tree
-  :defer t
   :diminish undo-tree-mode
   :bind
   (("C-/" . undo-tree-undo)
@@ -1480,7 +1485,6 @@ is =~/.emacs.d/user/snippets=.
 
 #+begin_src emacs-lisp
 (use-package expand-region
-  :defer t
   :bind ("C-=" . er/expand-region))
 
 #+end_src
@@ -1497,7 +1501,6 @@ is =~/.emacs.d/user/snippets=.
 
 #+begin_src emacs-lisp
 (use-package recentf
-  :defer 2
   :bind ("<f7>" . consult-recent-file)
   :custom
   (recentf-save-file (expand-file-name "recentf" forge-state-dir))
@@ -1531,7 +1534,6 @@ will need [[https://pypi.org/project/pyflakes/][pyflakes]] and probably [[https:
 
 #+begin_src emacs-lisp
 (use-package flycheck
-  :defer t
   :diminish flycheck-mode
   :custom (flycheck-global-modes '(not org-mode))
   :init (global-flycheck-mode))
@@ -1542,7 +1544,6 @@ will need [[https://pypi.org/project/pyflakes/][pyflakes]] and probably [[https:
 
 #+begin_src emacs-lisp
 (use-package company
-  :defer t
   :hook (prog-mode . company-mode)
   :diminish company-mode)
 #+end_src
@@ -1552,7 +1553,6 @@ will need [[https://pypi.org/project/pyflakes/][pyflakes]] and probably [[https:
 
 #+begin_src emacs-lisp
 (use-package ediff
-  :defer t
   :init
   (setq ediff-split-window-function 'split-window-horizontally
         ediff-window-setup-function 'ediff-setup-windows-plain))
@@ -1614,18 +1614,15 @@ Go ahead and set up modes to help with editing Lisp files.
 
 #+begin_src emacs-lisp
 (use-package aggressive-indent
-  :defer t
   :hook (emacs-lisp-mode . aggressive-indent-mode))
 
 (use-package lisp-mode
-  :defer t
   :hook
   (before-save . forge/turn-on-delete-trailing-whitespace)
   :config
   (setq lisp-indent-offset nil))
 
 (use-package eldoc
-  :defer t
   :diminish eldoc-mode
   :init
   (add-hook 'emacs-lisp-mode-hook #'eldoc-mode)
@@ -1640,7 +1637,6 @@ Use [[https://github.com/proofit404/anaconda-mode][anaconda-mode]] for navigatio
 
 #+begin_src emacs-lisp
 (use-package python
-  :defer t
   :interpreter ("python" . python-mode)
   :hook
   (python-mode . forge/turn-on-delete-trailing-whitespace)
@@ -1649,14 +1645,12 @@ Use [[https://github.com/proofit404/anaconda-mode][anaconda-mode]] for navigatio
   (setq-default python-indent-offset 4))
 
 (use-package anaconda-mode
-  :defer t
   :after python
   :hook python-mode
   :init
   (setq anaconda-mode-installation-directory (expand-file-name "anaconda" forge-state-dir)))
 
 (use-package company-anaconda
-  :defer t
   :after anaconda-mode)
 
 #+end_src
@@ -1667,14 +1661,12 @@ I pull in this package for the formatting and font-lock features.
 #+begin_src emacs-lisp
 (use-package go-mode
   :mode "\\.go\\ '"
-  :defer t
   :config
   (add-hook 'before-save-hook #'gofmt-before-save))
 #+end_src
 ** Shell scripts
 #+begin_src emacs-lisp
 (use-package shell-script
-  :defer t
   :hook
   (shell-script . forge/whitespace-visualize)
   (shell-script . forge/turn-on-delete-trailing-whitespace))
@@ -1685,7 +1677,6 @@ I pull in this package for the formatting and font-lock features.
 
 #+begin_src emacs-lisp
 (use-package web-mode
-  :defer t
   :init
   (progn
     (setq
@@ -1712,7 +1703,6 @@ See also [[http://emacsrocks.com/e15.html][Emacs Rocks: restclient-mode]] episod
 
 #+begin_src emacs-lisp
 (use-package restclient
-  :defer t
   :mode ("\\.http\\'" . restclient-mode))
 
 #+end_src
@@ -1721,8 +1711,7 @@ See also [[http://emacsrocks.com/e15.html][Emacs Rocks: restclient-mode]] episod
 This is really predominantly for syntax highlighting.
 
 #+begin_src emacs-lisp
-(use-package php-mode
-  :defer t)
+(use-package php-mode)
 #+end_src
 ** Data serialization formats
 *** JSON
@@ -1730,7 +1719,6 @@ This is really predominantly for syntax highlighting.
 
 #+begin_src emacs-lisp
 (use-package json-mode
-  :defer t
   :hook
   (json-mode . forge/turn-on-delete-trailing-whitespace)
   (json-mode . forge/whitespace-visualize))
@@ -1740,7 +1728,6 @@ This is really predominantly for syntax highlighting.
 
 #+begin_src emacs-lisp
 (use-package yaml-mode
-  :defer t
   :hook
   (yaml-mode . forge/turn-on-delete-trailing-whitespace)
   (yaml-mode . forge/whitespace-visualize)
@@ -1751,13 +1738,11 @@ This is really predominantly for syntax highlighting.
 *** Junos
 #+begin_src emacs-lisp
 (use-package junos-mode
-  :defer t
   :config (setq-local c-basic-offset 4))
 #+end_src
 *** EOS
 #+begin_src emacs-lisp
 (use-package eos-mode
-  :defer t
   :quelpa (eos-mode :fetcher github :repo "sfromm/eos-mode")
   :hook (eos-mode . highlight-indent-guides-mode))
 #+end_src
@@ -1766,9 +1751,7 @@ This is really predominantly for syntax highlighting.
 the [[https://github.com/ledger/ledger-mode][mode]] that goes with it.
 
 #+begin_src emacs-lisp
-(use-package ledger-mode
-  :defer t)
-
+(use-package ledger-mode)
 #+end_src
 * Applications
 ** Chat
@@ -1827,7 +1810,6 @@ IRC configuration.  As a default, use =user-login-name= as the default for
 
 #+begin_src emacs-lisp
 (use-package erc
-  :defer t
   :preface
   (defun sf/erc-connect ()
     "Connect to IRC via ERC"
@@ -1916,16 +1898,15 @@ Helpful resources:
   "Slack client token.")
 
 (use-package slack
-    :defer t
-    :commands (slack-start)
-    :bind (:map slack-mode-map
-                ("C-c C-e" . slack-message-edit)
-                ("C-c C-k" . slack-channel-leave)
-                ("@" . slack-message-embed-mention)
-                ("#" . slack-message-embed-channel))
-    :init
-    (setq slack-buffer-emojify t
-          slack-prefer-current-team t))
+  :commands (slack-start)
+  :bind (:map slack-mode-map
+              ("C-c C-e" . slack-message-edit)
+              ("C-c C-k" . slack-channel-leave)
+              ("@" . slack-message-embed-mention)
+              ("#" . slack-message-embed-channel))
+  :init
+  (setq slack-buffer-emojify t
+        slack-prefer-current-team t))
 
 
 #+end_src
@@ -1938,7 +1919,6 @@ https://writequit.org/denver-emacs/presentations/2016-05-24-elpy-and-dired.html#
 
 #+begin_src emacs-lisp
 (use-package dired
-  :defer t
   :preface
   (defun forge/dired-mode-hook ()
     "Set misc settings in dired mode."
@@ -2088,16 +2068,15 @@ documents.  [[https://magit.vc][magit]] is a wonderful frontend to git.
 I also pull in [[https://github.com/emacsmirror/git-timemachine][git-timemachine]] as a way to browse history in a git repository.
 
 #+begin_src emacs-lisp
-(use-package git-timemachine :defer t)
+(use-package git-timemachine)
 #+end_src
 *** Deprecated git-annex
 I no longer use [[https://git-annex.branchable.com][git-annex]].  Here for reference.
 
 #+begin_src emacs-lisp
-(use-package magit-annex :defer t)
+(use-package magit-annex)
 
 (use-package git-annex
-  :defer 1
   :after dired)
 #+end_src
 
@@ -2332,7 +2311,6 @@ headers/ field can be useful if you need to add headers on the outgoing email.
 
 #+begin_src emacs-lisp
 (use-package gnus-dired
-  :defer t
   :hook (dired-mode . turn-on-gnus-dired-mode)
   :init
   (setq gnus-dired-mail-mode 'notmuch-user-agent))
@@ -2446,7 +2424,6 @@ tools were not in a place to support this.
 
 #+begin_src emacs-lisp
 (use-package sendmail
-  :defer t
   :custom
   (mail-specify-envelope-from t)
   (mail-envelope-from 'header)
@@ -2457,7 +2434,6 @@ Here is an example of my deprecated =smtpmail= configuration.
 
 #+begin_src emacs-lisp
 (use-package smtpmail
-  :defer t
   :disabled t
   :config
   (setq smtpmail-stream-type 'ssl
@@ -2790,7 +2766,6 @@ I don't use MPD much anymore.  I used to use [[https://github.com/pft/mingus][Mi
 (use-package mingus
   :disabled t
   :ensure t
-  :defer t
   :preface
   (defun forge/get-current-song-mpd ()
     "Get the current song playing via MPD."
@@ -2808,7 +2783,6 @@ I don't use MPD much anymore.  I used to use [[https://github.com/pft/mingus][Mi
 #+begin_src emacs-lisp
 (use-package emms
   :ensure t
-  :defer t
   :config
   (emms-all)
   (emms-history-load)
@@ -2835,6 +2809,19 @@ I don't use MPD much anymore.  I used to use [[https://github.com/pft/mingus][Mi
 *** Org
 I pull in Org with all of the contributed packages via the /org-plus-contrib/
 package via the Org ELPA package repository.
+
+Miscellaneous notes:
+- [[https://orgmode.org/manual/Column-View.html#Column-View][Column View]] is a way to view the outline tree in a column view.  This
+  configures the default column view using =org-columns-default-format=.  You
+  can then turn on column view with =C-c C-x C-c=.  In column view, =g= will
+  refresh and =q= will exit. You can also optionally also [[https://orgmode.org/manual/Scope-of-column-definitions.html#Scope-of-column-definitions][define]] different columns
+  in an outline's =PROPERTIES=.
+#+begin_example
+:PROPERTIES:
+:COLUMNS: %25ITEM %TAGS %PRIORITY %TODO
+:END:
+#+end_example
+
 
 #+begin_src emacs-lisp
 (use-package org
@@ -3046,7 +3033,6 @@ package via the Org ELPA package repository.
 
 #+begin_src emacs-lisp
 (use-package org-mime
-  :defer t
   :hook
   (message-mode . (lambda () (local-set-key "\C-c\M-o" 'org-mime-htmlize)))
   :init
@@ -3055,7 +3041,6 @@ package via the Org ELPA package repository.
 *** Org Pomodoro
 #+begin_src emacs-lisp
 (use-package org-pomodoro
-  :defer t
   :bind
   (("C-c C-x C-i" . org-pomodoro)
    ("C-c C-x C-o" . org-pomodoro))
@@ -3083,7 +3068,6 @@ package via the Org ELPA package repository.
 *** Org Tree Slide for presentations from Org
 #+begin_src emacs-lisp
 (use-package org-tree-slide
-  :defer t
   :bind (:map org-tree-slide-mode-map
               ("<f8>" . org-tree-slide-mode)
               ("<f9>" . org-tree-slide-move-previous-tree)
@@ -3236,12 +3220,11 @@ It will not remove entries from the source org file."
 - [[https://github.com/yjwen/org-reveal][Org Export to Reveal JS]]
 
 #+begin_src emacs-lisp
-(use-package ol-git-link :defer t)
+(use-package ol-git-link)
 
 (use-package ol-eww :defer 5 :after org)
 
 (use-package org-contacts
-  :defer t
   :after org
   :config
   (setq org-contacts-files (list  "~/forge/contacts.org"))
@@ -3250,35 +3233,30 @@ It will not remove entries from the source org file."
                                         "* %(org-contacts-template-name)\n:PROPERTIES:\n:EMAIL: %(org-contacts-template-email)\n:PHONE:\n:ADDRESS:\n:BIRTHDAY:\n:END:")))
 
 (use-package org-bullets
-  :defer t
   :hook (org-mode . org-bullets-mode)
   :after org)
 
 (use-package org-id
-  :defer 2
   :after org
   :config
   (setq org-id-method 'uuid
         org-id-link-to-org-use-id 'create-if-interactive-and-no-custom-id))
 
 (use-package org-indent
-  :defer t
   :diminish t
   :custom
   (org-startup-indented t))
 
 (use-package htmlize
-  :ensure t
-  :defer t)
+  :ensure t)
 
-(use-package ox-twbs :defer t)
+(use-package ox-twbs)
 
 (use-package ox-reveal
-  :defer t
   :init
   (setq org-reveal-note-key-char nil))
 
-(use-package ox-tufte :defer t)
+(use-package ox-tufte)
 
 #+end_src
 *** Deprecated Org Journal
@@ -3287,7 +3265,6 @@ I used to use [[https://github.com/bastibe/org-journal][org-journal]] for journa
 #+begin_src emacs-lisp
 (use-package org-journal
   :disabled t
-  :defer t
   :preface
   (defun org-journal-find-location ()
     "Open today's journal file."
@@ -3334,12 +3311,10 @@ passwords to the clipboard.
 
 ;;
 (use-package pass
-  :defer t
   :ensure t)
 
 ;; https://github.com/ecraven/ivy-pass
 (use-package ivy-pass
-  :defer t
   :ensure t
   :bind
   ("C-c p" . ivy-pass))
@@ -3535,7 +3510,6 @@ Resources:
       (eshell-send-input)))
 
   (use-package em-unix
-    :defer t
     :config
     (unintern 'eshell/su nil)
     (unintern 'eshell/sudo nil))
@@ -3604,7 +3578,6 @@ A couple things of note:
 (defalias 'epa--decode-coding-string 'decode-coding-string)
 
 (use-package twittering-mode
-  :defer t
   :commands twit
   :bind
   (:map twittering-mode-map
@@ -3680,12 +3653,11 @@ The following are miscellaneous utilities that are small but useful.
 
 ** [[https://github.com/jschaf/emacs-lorem-ipsum][Lorem Ipsum]]
 #+begin_src emacs-lisp
-(use-package lorem-ipsum :defer t)
+(use-package lorem-ipsum)
 #+end_src
 ** [[https://github.com/defunkt/gist.el][Gist]]
 #+begin_src emacs-lisp
 (use-package gist
-  :defer t
   :custom (gist-view-gist t))
 #+end_src
 ** Weather with [[https://github.com/bcbcarl/emacs-wttrin][Wttrin]]
@@ -3700,7 +3672,7 @@ The following are miscellaneous utilities that are small but useful.
 Try to make it easier to use =emacsclient= as the =$EDITOR= of child processes using [[https://github.com/magit/with-editor][with-editor]].
 
 #+begin_src emacs-lisp
-(use-package with-editor :defer t)
+(use-package with-editor)
 #+end_src
 * Cleanup
 The goal here is to load the =custom.el= file, used by /customize/, load any
