--- a/emacs.org
+++ b/emacs.org
@@ -450,6 +450,11 @@ window.  This probably could be simplified by using something like [[https://git
   "Run mkhome git."
   (interactive)
   (forge-mkhome-target "git"))
+
+(defun forge-mkhome-www ()
+  "Run mkhome www."
+  (interactive)
+  (forge-mkhome-target "www"))
 #+end_src
 *** Loading modules helpers
 The following is meant to load any configuration in =forge-site-dir= or
@@ -996,6 +1001,7 @@ This is my personal keymap that then hooks into different commands, hydras, or o
 #+begin_src emacs-lisp
 (define-prefix-command 'forge-mkhome-map)
 (define-key forge-mkhome-map (kbd "g") 'forge-mkhome-git)
+(define-key forge-mkhome-map (kbd "w") 'forge-mkhome-www)
 
 (define-prefix-command 'forge-map)
 (define-key forge-map (kbd "w") 'forge/window/body)
