start with org files showing content but not everything

--- a/emacs.org
+++ b/emacs.org
@@ -2908,6 +2908,7 @@ Miscellaneous notes:
   (org-export-coding-system 'utf-8)
   (org-log-reschedule "note")
   (org-src-fontify-natively t)
+  (org-startup-folded 'content)
 
   :bind
   (("<f8>" . org-cycle-agenda-files)
