set org-babel-python-command to python3

--- a/emacs.org
+++ b/emacs.org
@@ -2913,6 +2913,7 @@ Miscellaneous notes:
   (org-log-reschedule "note")
   (org-src-fontify-natively t)
   (org-startup-folded 'content)
+  (org-babel-python-command "python3")
 
   :bind
   (("<f8>" . org-cycle-agenda-files)
