--- a/emacs.org
+++ b/emacs.org
@@ -1259,16 +1259,20 @@ still using the now obsolete commands & options.
 *** Tab bar
 The Emacs [[https://www.gnu.org/software/emacs/manual/html_node/emacs/Tab-Bars.html][tab bar]] provides a way to have virtual workspaces inside a single
 Emacs frame.  Each tab can have its own window arrangement.  In that way, it is
-similar to =eyebrowse= but is something built-in.  The keys for int
+similar to =eyebrowse= but is something built-in.  The table below describes
+common shortcuts and commands. for int
 
-| Command | Description                    |
-|---------+--------------------------------|
-| C-x t b | Open a buffer in a new tab     |
-| C-x t d | Open a directory in a new tab  |
-| C-x t f | Open a file in a new tab       |
-| C-x t 0 | Close current tab              |
-| C-x t 1 | Close all other tabs           |
-| C-x t 2 | Open current buffer in new tab |
+Separately, I use the function =prot-tab--tab-bar-tabs= from Prot's [[https://gitlab.com/protesilaos/dotfiles/-/blob/master/emacs/.emacs.d/prot-lisp/prot-tab.el][prot-tab.el]]
+as part of a DWIM function to switch tabs.
+
+| Key     | Command                      | Description                    |
+|---------+------------------------------+--------------------------------|
+| C-x t b | ~switch-to-buffer-other-tab~ | Open a buffer in a new tab     |
+| C-x t d | ~dired-other-tab~            | Open a directory in a new tab  |
+| C-x t f | ~find-file-other-tab~        | Open a file in a new tab       |
+| C-x t 0 | ~close-tab~                  | Close current tab              |
+| C-x t 1 | ~close-tab-other~            | Close all other tabs           |
+| C-x t 2 | ~tab-new~                    | Open current buffer in new tab |
 
 #+begin_src emacs-lisp
 (progn
@@ -1281,6 +1285,23 @@ similar to =eyebrowse= but is something built-in.  The keys for int
   (setq tab-bar-position nil)
   (setq tab-bar-show t))
 
+;; https://gitlab.com/protesilaos/dotfiles/-/blob/master/emacs/.emacs.d/prot-lisp/prot-tab.el
+(defun prot-tab--tab-bar-tabs ()
+  "Return a list of `tab-bar' tabs, minus the current one."
+  (mapcar (lambda (tab)
+            (alist-get 'name tab))
+          (tab-bar--tabs-recent)))
+
+(defun forge/dwim-switch-tab ()
+  "Do-What-I-Mean (DWIM) switch to other tab."
+  (interactive)
+  (let ((tabs (prot-tab--tab-bar-tabs)))
+    (cond ((eq tabs nil)
+           (tab-new))
+          ((eq (length tabs) 1)
+           (tab-next))
+          (t
+           (call-interactively #'tab-bar-select-tab-by-name)))))
 #+end_src
 
 *** Workspace management with =eyebrowse=
