rename switch-tab-dwim and add global key

--- a/emacs.org
+++ b/emacs.org
@@ -1292,8 +1292,11 @@ as part of a DWIM function to switch tabs.
             (alist-get 'name tab))
           (tab-bar--tabs-recent)))
 
-(defun forge/dwim-switch-tab ()
-  "Do-What-I-Mean (DWIM) switch to other tab."
+(defun forge/switch-tab-dwim ()
+  "Do-What-I-Mean (DWIM) switch to other tab.
+This will create a new tab if no tabs exist, switch
+to the other tab if there are only 2 tabs, and finally
+prompt for what tab to switch to."
   (interactive)
   (let ((tabs (prot-tab--tab-bar-tabs)))
     (cond ((eq tabs nil)
@@ -1302,12 +1305,14 @@ as part of a DWIM function to switch tabs.
            (tab-next))
           (t
            (call-interactively #'tab-bar-select-tab-by-name)))))
+
+(global-set-key (kbd "C-x t t") #'forge/switch-tab-dwim)
 #+end_src
 
 *** Workspace management with =eyebrowse=
 [[https://depp.brause.cc/eyebrowse/][eyebrowse]] is a global minor mode that allows you to organize window
 configurations into workspaces, similar to a window manager.  This configuration
-is here for reference.
+is here for reference and is deprecated.
 
 #+begin_src emacs-lisp
 (use-package eyebrowse
