--- a/emacs.org
+++ b/emacs.org
@@ -3316,7 +3316,7 @@ It will not remove entries from the source org file."
   :custom
   (org-id-method 'uuid)
   (org-id-link-to-org-use-id 'create-if-interactive-and-no-custom-id)
-  (org-id-locations-file (expand-file "org/id-locations.el" forge-state-dir)))
+  (org-id-locations-file (expand-file-name "org/id-locations.el" forge-state-dir)))
 
 (use-package org-indent
   :diminish t
